bugfix: fix bug z-index particles

--- a/client/src/components/mainParticles/mainParticles.module.scss
+++ b/client/src/components/mainParticles/mainParticles.module.scss
@@ -1,5 +1,9 @@
+@import "styles/variables.scss";
+
 .wrapper {
+  background: $backgroundLanding;
   position: absolute;
   height: 100%;
   width: 100%;
+  z-index: -1;
 }
