--- a/client/src/hoc/main/main.module.scss
+++ b/client/src/hoc/main/main.module.scss
@@ -2,7 +2,6 @@
 
 /* Main container */
 .container {
-  background: $backgroundLanding;
   height: 100vh;
   width: 100%;
   overflow: hidden;
